data/derived/fa15/progs/unify/prog0447.ml.out
Characters 84-89:
  (10*o, bigAdd(mulByDigit ((o*x) l1)) l)
                            ^^^^^
Error: This expression has type int
       This is not a function; it cannot be applied.
